--- a/Validator.Cliente/appsettings.json
+++ b/Validator.Cliente/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  //Contraseña para acceder
+  "Security": {
+    "ApiKey": "My Pass"
+  },
+
+  //Paginacion defauld
+  "Pagination": {
+    "DefaultPageSize": 10,
+    "DefaultPageNumber": 1
+  }
 }
