--- a/APIValidator.Core/Validator.Core.csproj
+++ b/APIValidator.Core/Validator.Core.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.9" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="MongoDB.Driver" Version="2.17.0" />
+  </ItemGroup>
+
 </Project>
